--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -2,115 +2,104 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/EventCard"
+    android:id="@+id/eventCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/element_spacing"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent
-
 ">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/EventCardCL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/HeadEventCardCL"
-            android:layout_width="match_parent"
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/avatarIV"
+            android:layout_width="@dimen/posts_avatar_size"
+            android:layout_height="@dimen/posts_avatar_size"
+            android:layout_margin="@dimen/common_spacing"
+            android:background="@drawable/not_avatar_circle_background"
+            android:contentDescription="@string/desc_avatar_image"
+            android:src="@drawable/img_test_avatar"
+            app:layout_constraintBottom_toBottomOf="@id/barrierTop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/authorTV"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/barrier_top"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_margin="@dimen/element_spacing"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textSize="@dimen/size_text_title"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/publishedEventTV"
+            app:layout_constraintEnd_toStartOf="@id/menuIB"
+            app:layout_constraintStart_toEndOf="@id/avatarIV"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Albert Ablyaev" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/AvatarIV"
-                android:layout_width="@dimen/posts_avatar_size"
-                android:layout_height="@dimen/posts_avatar_size"
-                android:layout_margin="@dimen/common_spacing"
-                android:background="@drawable/not_avatar_circle_background"
-                android:contentDescription="@string/desc_avatar_image"
-                android:src="@drawable/img_test_avatar"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/publishedEventTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/element_spacing"
+            android:layout_marginEnd="@dimen/element_spacing"
+            android:layout_marginBottom="@dimen/element_spacing"
+            app:layout_constraintBottom_toBottomOf="@id/barrierTop"
+            app:layout_constraintEnd_toStartOf="@id/menuIB"
+            app:layout_constraintStart_toEndOf="@id/avatarIV"
+            app:layout_constraintTop_toBottomOf="@id/authorTV"
+            tools:text="12.02.21 13:00" />
 
-
-            <TextView
-                android:id="@+id/AuthorTV"
-
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/element_spacing"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textSize="@dimen/size_text_title"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/PublishedEventTV"
-                app:layout_constraintEnd_toStartOf="@id/MenuIB"
-                app:layout_constraintStart_toEndOf="@id/AvatarIV"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:text="Albert Ablyaev" />
-
-            <TextView
-                android:id="@+id/PublishedEventTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/element_spacing"
-                android:layout_marginEnd="@dimen/element_spacing"
-                android:layout_marginBottom="@dimen/element_spacing"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/MenuIB"
-                app:layout_constraintStart_toEndOf="@id/AvatarIV"
-                app:layout_constraintTop_toBottomOf="@id/AuthorTV"
-
-                tools:text="12.02.21 13:00" />
-
-            <ImageButton
-                android:id="@+id/MenuIB"
-                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/element_spacing"
-                android:contentDescription="@string/desc_icon_menu_button"
-                android:paddingStart="@dimen/double_spacing"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_menu_vert_24dp"
-                tools:ignore="RtlSymmetry" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageButton
+            android:id="@+id/menuIB"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/element_spacing"
+            android:contentDescription="@string/desc_icon_menu_button"
+            android:paddingStart="@dimen/double_spacing"
+            app:layout_constraintBottom_toBottomOf="@id/barrierTop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_menu_vert_24dp"
+            tools:ignore="RtlSymmetry" />
 
 
         <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier_top"
+            android:id="@+id/barrierTop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
-            app:constraint_referenced_ids="HeadEventCardCL" />
+            app:constraint_referenced_ids="menuIB,publishedEventTV,authorTV,avatarIV" />
 
         <TextView
-            android:id="@+id/TextEventTV"
+            android:id="@+id/textEventTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_spacing"
             android:autoLink="web"
             android:padding="@dimen/common_spacing"
-            app:layout_constraintBottom_toTopOf="@id/LinkEventTV"
+            app:layout_constraintBottom_toTopOf="@id/linkEventTV"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/DateEventTV"
+            app:layout_constraintTop_toBottomOf="@id/dateEventTV"
             tools:text="@tools:sample/lorem[20]" />
 
         <FrameLayout
-            android:id="@+id/AttachmentGroup"
+            android:id="@+id/attachmentGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier_top">
+            app:layout_constraintTop_toBottomOf="@id/barrierTop">
 
             <ImageView
                 android:id="@+id/imageAttachment"
@@ -125,58 +114,57 @@
                 tools:visibility="visible" />
 
             <include
-                android:id="@+id/audio_attachment"
+                android:id="@+id/audioAttachment"
                 layout="@layout/audio_play"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
             <include
-                android:id="@+id/video_attachment"
+                android:id="@+id/videoAttachment"
                 layout="@layout/video_play" />
         </FrameLayout>
 
         <TextView
-            android:id="@+id/TypeEventTV"
+            android:id="@+id/typeEventTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_spacing"
             android:paddingStart="@dimen/common_spacing"
             android:paddingEnd="@dimen/common_spacing"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/AttachmentGroup"
-            tools:layout_editor_absoluteX="8dp"
+            app:layout_constraintTop_toBottomOf="@id/attachmentGroup"
             tools:text="Online" />
 
         <TextView
-            android:id="@+id/DateEventTV"
+            android:id="@+id/dateEventTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/common_spacing"
             android:paddingEnd="@dimen/common_spacing"
-            app:layout_constraintTop_toBottomOf="@id/TypeEventTV"
+            app:layout_constraintTop_toBottomOf="@id/typeEventTV"
             tools:text="12.02.2021 10:45" />
 
         <TextView
-            android:id="@+id/LinkEventTV"
+            android:id="@+id/linkEventTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoLink="web"
             android:paddingStart="@dimen/common_spacing"
             android:paddingEnd="@dimen/common_spacing"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/TextEventTV"
+            app:layout_constraintTop_toBottomOf="@id/textEventTV"
             tools:text="https://03www.ru/"
             tools:visibility="visible" />
 
         <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier_middle"
+            android:id="@+id/barrierMiddle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
-            app:constraint_referenced_ids="TextEventTV,AttachmentGroup,LinkEventTV" />
+            app:constraint_referenced_ids="textEventTV,attachmentGroup,linkEventTV" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/ShareIB"
+            android:id="@+id/shareIB"
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -185,12 +173,12 @@
             android:contentDescription="@string/desc_icon_share"
             app:icon="@drawable/ic_share_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/LikeIB"
-            app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
+            app:layout_constraintStart_toEndOf="@id/likeIB"
+            app:layout_constraintTop_toBottomOf="@id/barrierMiddle" />
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/LikeIB"
+            android:id="@+id/likeIB"
             style="@style/Widget.AppTheme.LikeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -199,12 +187,12 @@
             android:checkable="true"
             android:contentDescription="@string/desc_icon_like"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier_middle"
+            app:layout_constraintTop_toBottomOf="@id/barrierMiddle"
             tools:text="10" />
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/UsersIB"
+            android:id="@+id/usersIB"
             style="@style/Widget.AppTheme.ParticipantsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -214,7 +202,7 @@
             android:contentDescription="@string/desc_icon_people"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier_middle"
+            app:layout_constraintTop_toBottomOf="@id/barrierMiddle"
             tools:text="10" />
 
 
