--- a/app/src/main/res/layout/user_card_choose.xml
+++ b/app/src/main/res/layout/user_card_choose.xml
@@ -18,7 +18,7 @@
         android:padding="@dimen/common_spacing">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/AvatarIV"
+            android:id="@+id/avatarIV"
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
             android:layout_marginBottom="@dimen/common_spacing"
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/AuthorTV"
+            android:id="@+id/authorTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_spacing"
@@ -39,28 +39,28 @@
             android:singleLine="true"
             android:textSize="@dimen/size_text_title"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/LoginTV"
-            app:layout_constraintEnd_toStartOf="@id/ChooseUserCB"
-            app:layout_constraintStart_toEndOf="@id/AvatarIV"
+            app:layout_constraintBottom_toTopOf="@+id/loginTV"
+            app:layout_constraintEnd_toStartOf="@id/chooseUserCB"
+            app:layout_constraintStart_toEndOf="@id/avatarIV"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="Albert Ablyaev" />
 
         <TextView
-            android:id="@+id/LoginTV"
+            android:id="@+id/loginTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_spacing"
             android:layout_marginTop="@dimen/element_spacing"
             android:layout_marginEnd="@dimen/common_spacing"
             android:layout_marginBottom="@dimen/common_spacing"
-            app:layout_constraintEnd_toStartOf="@id/ChooseUserCB"
-            app:layout_constraintStart_toEndOf="@id/AvatarIV"
-            app:layout_constraintTop_toBottomOf="@id/AuthorTV"
+            app:layout_constraintEnd_toStartOf="@id/chooseUserCB"
+            app:layout_constraintStart_toEndOf="@id/avatarIV"
+            app:layout_constraintTop_toBottomOf="@id/authorTV"
             tools:text="albiberio" />
 
         <CheckBox
-            android:id="@+id/ChooseUserCB"
+            android:id="@+id/chooseUserCB"
             style="@style/Widget.Material3.CompoundButton.CheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
