--- a/app/src/main/res/layout/event_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/event_bottom_sheet_dialog.xml
@@ -1,71 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/element_spacing">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/BottomSheetFL"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/dateEventET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/element_spacing"
-        >
+        android:layout_gravity="center"
+        android:hint="@string/hint_date_event"
+        app:endIconDrawable="@drawable/ic_calendar_24dp"
+        app:endIconMode="custom"
+        app:helperText="dd/MM/yyyy HH:mm"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/DateEventET"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dataInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/titleTypeTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:text="@string/title_type_event"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/dateEventET" />
+
+    <RadioGroup
+        android:id="@+id/calendarRG"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_spacing"
+        app:layout_constraintTop_toBottomOf="@id/titleTypeTV">
+
+        <RadioButton
+            android:id="@+id/onlineRB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:hint="@string/hint_date_event"
-            app:endIconDrawable="@drawable/ic_calendar_24dp"
-            app:endIconMode="custom"
-            app:helperText="dd/MM/yyyy HH:mm"
-            app:layout_constraintTop_toTopOf="parent">
+            android:checked="true"
+            android:paddingStart="@dimen/common_spacing"
+            android:paddingEnd="@dimen/common_spacing"
+            android:text="@string/text_radio_button_online"
+            android:textStyle="bold" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/DataInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/TitleTypeTV"
+        <RadioButton
+            android:id="@+id/offlineRB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_spacing"
-            android:text="@string/title_type_event"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/DateEventET" />
+            android:paddingStart="@dimen/common_spacing"
+            android:paddingEnd="@dimen/common_spacing"
+            android:text="@string/text_radio_button_offline"
+            android:textStyle="bold" />
+    </RadioGroup>
 
-        <RadioGroup
-            android:id="@+id/CalendarRG"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/common_spacing"
-            app:layout_constraintTop_toBottomOf="@id/TitleTypeTV">
-
-            <RadioButton
-                android:id="@+id/OnlineRB"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:paddingStart="@dimen/common_spacing"
-                android:paddingEnd="@dimen/common_spacing"
-                android:text="@string/text_radio_button_online"
-                android:textStyle="bold" />
-
-            <RadioButton
-                android:id="@+id/OfflineRB"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/common_spacing"
-                android:paddingEnd="@dimen/common_spacing"
-                android:text="@string/text_radio_button_offline"
-                android:textStyle="bold" />
-        </RadioGroup>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
