--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -8,12 +8,11 @@
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/EventDetailsABL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/EventDetailsTBL"
+            android:id="@+id/eventDetailsTBL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
@@ -34,21 +33,21 @@
             android:layout_height="wrap_content">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/AvatarIV"
+                android:id="@+id/avatarIV"
                 android:layout_width="@dimen/posts_avatar_size"
                 android:layout_height="@dimen/posts_avatar_size"
                 android:layout_margin="@dimen/common_spacing"
 
                 android:background="@drawable/not_avatar_circle_background"
                 android:contentDescription="@string/desc_avatar_image"
-                app:layout_constraintBottom_toBottomOf="@id/barrier_top"
+                app:layout_constraintBottom_toBottomOf="@id/barrierTop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/img_test_avatar" />
 
 
             <TextView
-                android:id="@+id/AuthorTV"
+                android:id="@+id/authorTV"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/common_spacing"
@@ -59,40 +58,40 @@
                 android:singleLine="true"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/NameJobTV"
+                app:layout_constraintBottom_toTopOf="@+id/nameJobTV"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/AvatarIV"
+                app:layout_constraintStart_toEndOf="@id/avatarIV"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed"
                 tools:text="Albert Ablyaev" />
 
             <TextView
-                android:id="@+id/NameJobTV"
+                android:id="@+id/nameJobTV"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/common_spacing"
                 android:layout_marginEnd="@dimen/common_spacing"
 
-                app:layout_constraintBottom_toBottomOf="@id/barrier_top"
+                app:layout_constraintBottom_toBottomOf="@id/barrierTop"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/AvatarIV"
-                app:layout_constraintTop_toBottomOf="@id/AuthorTV"
+                app:layout_constraintStart_toEndOf="@id/avatarIV"
+                app:layout_constraintTop_toBottomOf="@id/authorTV"
                 tools:text="Android Developer" />
 
             <androidx.constraintlayout.widget.Barrier
-                android:id="@+id/barrier_top"
+                android:id="@+id/barrierTop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
-                app:constraint_referenced_ids="AvatarIV,NameJobTV" />
+                app:constraint_referenced_ids="avatarIV,nameJobTV" />
 
             <FrameLayout
-                android:id="@+id/AttachmentGroup"
+                android:id="@+id/attachmentGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/barrier_top">
+                app:layout_constraintTop_toBottomOf="@id/barrierTop">
 
                 <ImageView
                     android:id="@+id/imageAttachment"
@@ -107,18 +106,18 @@
                     tools:visibility="visible" />
 
                 <include
-                    android:id="@+id/audio_attachment"
+                    android:id="@+id/audioAttachment"
                     layout="@layout/audio_play"
                     android:visibility="gone"
                     tools:visibility="visible" />
 
                 <include
-                    android:id="@+id/video_attachment"
+                    android:id="@+id/videoAttachment"
                     layout="@layout/video_play" />
             </FrameLayout>
 
             <TextView
-                android:id="@+id/TypeEventTV"
+                android:id="@+id/typeEventTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/common_spacing"
@@ -126,43 +125,43 @@
                 android:paddingEnd="@dimen/common_spacing"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/DateEventTV"
+                app:layout_constraintBottom_toTopOf="@id/dateEventTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/AttachmentGroup"
+                app:layout_constraintTop_toBottomOf="@id/attachmentGroup"
                 tools:text="@string/text_type_event_online" />
 
             <TextView
-                android:id="@+id/DateEventTV"
+                android:id="@+id/dateEventTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/common_spacing"
                 android:paddingTop="@dimen/element_spacing"
                 android:paddingEnd="@dimen/common_spacing"
                 android:paddingBottom="@dimen/element_spacing"
-                app:layout_constraintBottom_toTopOf="@id/TextEventTV"
+                app:layout_constraintBottom_toTopOf="@id/textEventTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/TypeEventTV"
+                app:layout_constraintTop_toBottomOf="@id/typeEventTV"
                 tools:text="12.02.21 10:45" />
 
 
             <TextView
-                android:id="@+id/TextEventTV"
+                android:id="@+id/textEventTV"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:autoLink="web"
                 android:padding="@dimen/common_spacing"
-                app:layout_constraintBottom_toTopOf="@id/TitleSpeakersTV"
+                app:layout_constraintBottom_toTopOf="@id/titleSpeakersTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/DateEventTV"
+                app:layout_constraintTop_toBottomOf="@id/dateEventTV"
                 tools:ignore="VisualLintLongText"
                 tools:text="@tools:sample/lorem[20]" />
 
             <TextView
-                android:id="@+id/TitleSpeakersTV"
+                android:id="@+id/titleSpeakersTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/common_spacing"
@@ -170,60 +169,59 @@
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
                 android:visibility="gone"
-                app:layout_constraintBottom_toTopOf="@id/GroupSpeakersLL"
+                app:layout_constraintBottom_toTopOf="@id/groupSpeakersLL"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/TextEventTV"
+                app:layout_constraintTop_toBottomOf="@id/textEventTV"
                 tools:visibility="visible" />
 
 
             <LinearLayout
-                android:id="@+id/GroupSpeakersLL"
+                android:id="@+id/groupSpeakersLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:orientation="horizontal"
                 android:paddingStart="@dimen/common_spacing"
                 android:paddingEnd="@dimen/common_spacing"
                 android:visibility="gone"
-                app:layout_constraintBottom_toTopOf="@id/TitleLikersTV"
+                app:layout_constraintBottom_toTopOf="@id/titleLikersTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/TitleSpeakersTV"
+                app:layout_constraintTop_toBottomOf="@id/titleSpeakersTV"
                 tools:visibility="visible">
 
                 <include
-                    android:id="@+id/list_avatars_speakers"
+                    android:id="@+id/listAvatarsSpeakers"
                     layout="@layout/avatars_multiple" />
             </LinearLayout>
 
             <TextView
-                android:id="@+id/TitleLikersTV"
+                android:id="@+id/titleLikersTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/common_spacing"
                 android:text="@string/title_likers"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/GroupLikersLL"
+                app:layout_constraintBottom_toTopOf="@id/groupLikersLL"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/GroupSpeakersLL" />
+                app:layout_constraintTop_toBottomOf="@id/groupSpeakersLL" />
 
             <LinearLayout
-                android:id="@+id/GroupLikersLL"
+                android:id="@+id/groupLikersLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@id/TitleParticipantTV"
+                app:layout_constraintBottom_toTopOf="@id/titleParticipantTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/TitleLikersTV">
+                app:layout_constraintTop_toBottomOf="@id/titleLikersTV">
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/LikeIB"
+                    android:id="@+id/likeIB"
                     style="@style/Widget.AppTheme.LikeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -234,69 +232,67 @@
                     android:contentDescription="@string/desc_icon_like"
                     android:padding="@dimen/common_spacing"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/barrier_middle"
+                    app:layout_constraintTop_toBottomOf="@id/barrierMiddle"
                     tools:text="10" />
 
                 <include
-                    android:id="@+id/list_avatars_likers"
+                    android:id="@+id/listAvatarsLikers"
                     layout="@layout/avatars_multiple" />
             </LinearLayout>
 
             <TextView
-                android:id="@+id/TitleParticipantTV"
+                android:id="@+id/titleParticipantTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/common_spacing"
                 android:text="@string/title_participant"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/GroupParticipantLL"
+                app:layout_constraintBottom_toTopOf="@id/groupParticipantLL"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/GroupLikersLL" />
+                app:layout_constraintTop_toBottomOf="@id/groupLikersLL" />
 
             <LinearLayout
-                android:id="@+id/GroupParticipantLL"
+                android:id="@+id/groupParticipantLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@id/ContainerMap"
+                app:layout_constraintBottom_toTopOf="@id/containerMap"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/TitleParticipantTV">
+                app:layout_constraintTop_toBottomOf="@id/titleParticipantTV">
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/ParticipantB"
+                    android:id="@+id/participantB"
                     style="@style/Widget.AppTheme.ParticipantsButton"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/posts_avatar_size"
                     android:layout_marginEnd="@dimen/element_spacing"
-
                     android:backgroundTint="@color/transparent"
-
                     android:checkable="true"
                     android:padding="@dimen/common_spacing"
                     tools:text="10" />
 
                 <include
-                    android:id="@+id/list_avatars_participant"
+                    android:id="@+id/listAvatarsParticipant"
                     layout="@layout/avatars_multiple" />
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ContainerMap"
+                android:id="@+id/containerMap"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/max_size_attachment"
                 android:clickable="true"
-                app:layout_constraintBottom_toTopOf="@id/TitleLinkTV"
+                android:contentDescription="@string/desc_map_fragment"
+                app:layout_constraintBottom_toTopOf="@id/titleLinkTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/GroupParticipantLL">
+                app:layout_constraintTop_toBottomOf="@id/groupParticipantLL">
 
 
                 <com.yandex.mapkit.mapview.MapView
-                    android:id="@+id/GeoEventMW"
+                    android:id="@+id/geoEventMW"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/common_spacing"
@@ -310,22 +306,21 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/TitleLinkTV"
+                android:id="@+id/titleLinkTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/common_spacing"
-
                 android:text="@string/title_site"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/LinkPostTV"
+                app:layout_constraintBottom_toTopOf="@id/linkPostTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ContainerMap" />
+                app:layout_constraintTop_toBottomOf="@id/containerMap" />
 
 
             <TextView
-                android:id="@+id/LinkPostTV"
+                android:id="@+id/linkPostTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autoLink="web"
@@ -333,7 +328,7 @@
                 android:paddingEnd="@dimen/common_spacing"
                 android:paddingBottom="@dimen/common_spacing"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/TitleLinkTV"
+                app:layout_constraintTop_toBottomOf="@id/titleLinkTV"
                 tools:text="https://03www.ru/" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
