--- a/app/src/main/res/layout/job_dates_picker.xml
+++ b/app/src/main/res/layout/job_dates_picker.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/Header"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/SelectDatesTV"
+            android:id="@+id/selectDatesTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_spacing"
@@ -30,26 +30,26 @@
             android:text="@string/enter_dates"
             android:textSize="@dimen/size_text_header"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/SelectDatesTV" />
+            app:layout_constraintTop_toBottomOf="@id/selectDatesTV" />
 
         <ImageButton
-            android:id="@+id/DatePickerIB"
+            android:id="@+id/datePickerIB"
             android:layout_width="@dimen/icon_min_size"
             android:layout_height="@dimen/icon_min_size"
             android:layout_marginEnd="@dimen/common_spacing"
             android:layout_marginBottom="@dimen/double_spacing"
             android:background="@drawable/ic_calendar_24dp"
             android:contentDescription="@string/select_date"
-            app:layout_constraintBottom_toBottomOf="@id/Header"
-            app:layout_constraintEnd_toEndOf="@id/Header" />
+            app:layout_constraintBottom_toBottomOf="@id/header"
+            app:layout_constraintEnd_toEndOf="@id/header" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/DatesCL"
+        android:id="@+id/datesCL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Header">
+        app:layout_constraintTop_toBottomOf="@id/header">
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -64,7 +64,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/DateStartTI"
+                android:id="@+id/dateStartTI"
                 android:layout_width="@dimen/size_enter_date_width"
                 android:layout_height="@dimen/size_enter_date_height"
                 android:focusable="false"
@@ -72,7 +72,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/date_end_layout"
+            android:id="@+id/dateEndLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/date_end_input"
+                android:id="@+id/dateEndInput"
                 android:layout_width="@dimen/size_enter_date_width"
                 android:layout_height="@dimen/size_enter_date_height"
                 android:clickable="true"
@@ -95,14 +95,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageButton
-            android:id="@+id/ClearDateIB"
+            android:id="@+id/clearDateIB"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginTop="9dp"
             android:background="@drawable/ic_clear_24dp"
             android:importantForAccessibility="no"
-            app:layout_constraintEnd_toEndOf="@id/date_end_layout"
-            app:layout_constraintTop_toTopOf="@id/date_end_layout" />
+            app:layout_constraintEnd_toEndOf="@id/dateEndLayout"
+            app:layout_constraintTop_toTopOf="@id/dateEndLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
@@ -112,17 +112,17 @@
         android:layout_marginEnd="@dimen/common_spacing"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/DatesCL">
+        app:layout_constraintTop_toBottomOf="@id/datesCL">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/CancelIB"
+            android:id="@+id/cancelIB"
             style="@style/button_job_date_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/OkIB"
+            android:id="@+id/okIB"
             style="@style/button_job_date_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
