--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -6,12 +6,11 @@
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/RegistrationABL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/RegistrationMTB"
+            android:id="@+id/registrationMTB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
@@ -26,14 +25,13 @@
         android:padding="@dimen/spaccing_login_reg">
 
         <ImageButton
-            android:id="@+id/LoadAvatarIB"
-
+            android:id="@+id/loadAvatarIB"
             android:layout_width="@dimen/background_circle_reg"
             android:layout_height="@dimen/background_circle_reg"
             android:background="@drawable/circle_button_background"
             android:contentDescription="@string/avatar_load_button"
             android:src="@drawable/ic_photo_camera_60dp"
-            app:layout_constraintBottom_toTopOf="@id/LoginETL"
+            app:layout_constraintBottom_toTopOf="@id/loginETL"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:clipToOutline="true"
@@ -41,37 +39,37 @@
             app:layout_constraintVertical_chainStyle="packed" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/LoginETL"
+            android:id="@+id/loginETL"
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
             android:hint="@string/hint_login_edit_text"
-            app:layout_constraintBottom_toTopOf="@id/NameTL"
+            app:layout_constraintBottom_toTopOf="@id/nameTL"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/LoadAvatarIB">
+            app:layout_constraintTop_toBottomOf="@id/loadAvatarIB">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/Login"
+                android:id="@+id/loginTI"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/NameTL"
+            android:id="@+id/nameTL"
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
             android:hint="@string/hint_name_job_edit_text"
-            app:layout_constraintBottom_toTopOf="@id/PasswordETL"
+            app:layout_constraintBottom_toTopOf="@id/passwordETL"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/LoginETL">
+            app:layout_constraintTop_toBottomOf="@id/loginETL">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/Name"
+                android:id="@+id/nameTI"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -79,7 +77,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/PasswordETL"
+            android:id="@+id/passwordETL"
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -87,14 +85,14 @@
             android:layout_marginTop="@dimen/element_spacing"
             android:hint="@string/hint_password_edit_text"
             app:endIconMode="password_toggle"
-            app:layout_constraintBottom_toTopOf="@id/PasswordRepeatETL"
+            app:layout_constraintBottom_toTopOf="@id/passwordRepeatETL"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/NameTL">
+            app:layout_constraintTop_toBottomOf="@id/nameTL">
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/Pass"
+                android:id="@+id/passTI"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
@@ -103,7 +101,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/PasswordRepeatETL"
+            android:id="@+id/passwordRepeatETL"
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -111,14 +109,14 @@
             android:layout_marginTop="@dimen/element_spacing"
             android:hint="@string/hint_password_repeat_edit_text"
             app:endIconMode="password_toggle"
-            app:layout_constraintBottom_toTopOf="@id/SignUpB"
+            app:layout_constraintBottom_toTopOf="@id/signUpB"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/PasswordETL">
+            app:layout_constraintTop_toBottomOf="@id/passwordETL">
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/PassRepeat"
+                android:id="@+id/passRepeat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
@@ -127,7 +125,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/SignUpB"
+            android:id="@+id/signUpB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
@@ -135,7 +133,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/PasswordETL" />
+            app:layout_constraintTop_toBottomOf="@id/passwordETL" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
