--- a/app/src/main/res/layout/video_load.xml
+++ b/app/src/main/res/layout/video_load.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/video_load"
+    android:id="@+id/videoLoad"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <include
-        android:id="@+id/video_play"
+        android:id="@+id/videoPlay"
         layout="@layout/video_play" />
 
     <com.google.android.material.button.MaterialButton
@@ -16,7 +16,7 @@
         android:text="@string/text_button_remove"
         android:textAllCaps="false"
         app:cornerRadius="100dp"
-        app:layout_constraintBottom_toBottomOf="@id/video_play"
+        app:layout_constraintBottom_toBottomOf="@id/videoPlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
