--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -2,7 +2,6 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_main"
     app:startDestination="@id/postNavigation">
     <fragment
         android:id="@+id/signInFragment"
@@ -116,7 +115,7 @@
         app:startDestination="@id/eventFragment">
         <fragment
             android:id="@+id/eventFragment"
-            android:name="ru.shelq.nework.ui.post.EventFragment"
+            android:name="ru.shelq.nework.ui.event.EventFragment"
             android:label="@string/app_name"
             tools:layout="@layout/event_fragment">
 
